fixing z index on dropdown filters. fixing map spacing. added title and padding to drawer

--- a/src/app/grid/gridClient.module.css
+++ b/src/app/grid/gridClient.module.css
@@ -63,9 +63,15 @@
     padding-top: 100px;
     padding-bottom: 120px;
   }
+
   .unOrderedListContainer {
     margin: 0 auto;
   }
+
+  .textContainer {
+    padding-bottom: 1rem;
+  }
+
   .cloudinaryImg {
     height: 15rem;
     width: 90%;
